add getCard and getList on Deck, add extends on all subclass of card and start the CommonArea class