@@ -7,20 +7,20 @@ import java.util.Collections;
  * Deck class
  * @author elylo
  */
-public class Deck {
-    ArrayList<Card> list;
+public class Deck<E extends Card> {
+    ArrayList<E> list;
     /**
      * Class costructor
      */
     public Deck(){
-       list = new ArrayList<Card>();
+       list = new ArrayList<E>();
     }
 
     /**
      * method addCard: add a card to the end of the deck
      * @param c: cardo to add to the end of the deck
      */
-    public void addGoldCard(Card c){
+    public void addGoldCard(E c){
         list.add(c);
     }
     /**
@@ -32,8 +32,8 @@ public class Deck {
     /**
      * method removeCard:  remove the top card from deck
      */
-    public ArrayList<Card> removeCard(){
-        list.remove(0);
+    public ArrayList<E> removeCard(){
+        list.removeFirst();
         return list;
     }
     /**
@@ -43,5 +43,20 @@ public class Deck {
         return list.size();
     }
 
+    /**
+     * method getCard: return the cards equal to the ID
+     * @param ID: id of the card I'm looking for in the deck
+     */
+    public Card getCard(int ID){
+        for (int i = 0; i < list.size(); i++) {
+            if (ID== list.get(i).ID) {
+                return list.get(i);
+            }
+        }
+        return null;
+    }
 
+    public ArrayList<E> getList() {
+        return list;
+    }
 }
